--- a/Rice-leaf-detection.ipynb
+++ b/Rice-leaf-detection.ipynb
@@ -49,7 +49,7 @@
     "BATCH_SIZE = 32\n",
     "IMAGE_SIZE = 256\n",
     "CHANNELS=3\n",
-    "EPOCHS=30"
+    "EPOCHS=50"
    ]
   },
   {
@@ -73,7 +73,7 @@
     }
    ],
    "source": [
-    "dataset = tf.keras.utils.image_dataset_from_directory('Riceleaf') "
+    "dataset = tf.keras.utils.image_dataset_from_directory('RiceLeaf') "
    ]
   },
   {
@@ -362,12 +362,6 @@
     "\n",
     "model = models.Sequential([\n",
     "    resize_and_rescale,\n",
-    "    layers.Conv2D(32, kernel_size = (3,3), activation='relu', input_shape=input_shape),\n",
-    "    layers.MaxPooling2D((2, 2)),\n",
-    "    layers.Conv2D(64,  kernel_size = (3,3), activation='relu'),\n",
-    "    layers.MaxPooling2D((2, 2)),\n",
-    "    layers.Conv2D(64,  kernel_size = (3,3), activation='relu'),\n",
-    "    layers.MaxPooling2D((2, 2)),\n",
     "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
     "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
@@ -412,24 +406,9 @@
       " max_pooling2d_2 (MaxPooling  (32, 30, 30, 64)         0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " conv2d_3 (Conv2D)           (32, 28, 28, 64)          36928     \n",
+      " flatten (Flatten)           (32, 57600)                 0       \n",
       "                                                                 \n",
-      " max_pooling2d_3 (MaxPooling  (32, 14, 14, 64)         0         \n",
-      " 2D)                                                             \n",
-      "                                                                 \n",
-      " conv2d_4 (Conv2D)           (32, 12, 12, 64)          36928     \n",
-      "                                                                 \n",
-      " max_pooling2d_4 (MaxPooling  (32, 6, 6, 64)           0         \n",
-      " 2D)                                                             \n",
-      "                                                                 \n",
-      " conv2d_5 (Conv2D)           (32, 4, 4, 64)            36928     \n",
-      "                                                                 \n",
-      " max_pooling2d_5 (MaxPooling  (32, 2, 2, 64)           0         \n",
-      " 2D)                                                             \n",
-      "                                                                 \n",
-      " flatten (Flatten)           (32, 256)                 0         \n",
-      "                                                                 \n",
-      " dense (Dense)               (32, 64)                  16448     \n",
+      " dense (Dense)               (32, 64)                  3686464   \n",
       "                                                                 \n",
       " dense_1 (Dense)             (32, 3)                   195       \n",
       "                                                                 \n",
@@ -587,7 +566,7 @@
     "    batch_size=BATCH_SIZE,\n",
     "    validation_data=val_ds,\n",
     "    verbose=1,\n",
-    "    epochs=30,\n",
+    "    epochs=50,\n",
     ")"
    ]
   },
